--- a/auth-server.yml
+++ b/auth-server.yml
@@ -18,7 +18,7 @@ security:
         client:
             access-token-validity-seconds: 1800
             authorized-grant-types: password,refresh_token
-            client-id: coderef
+            client-id: tomwellAngularApp
             client-secret: $2a$10$OWdyA/qUvQ71CSbMMThAgep/z3piJgSpBaMBmZpa03YWvPqeyCVEi
             resource-ids: resources
             scope: read,write
