--- a/auth-server.yml
+++ b/auth-server.yml
@@ -26,8 +26,9 @@ security:
 spring:
     datasource:
         url: jdbc:h2:mem:test
+        data: classpath:/sql/data.sql
+        schema: classpath:/sql/schema.sql
     jpa:
-        database-platform: org.hibernate.dialect.MySQLDialect
         generate-ddl: false
         hibernate:
             ddl-auto: none
