--- a/auth-server.yml
+++ b/auth-server.yml
@@ -33,3 +33,7 @@ spring:
         hibernate:
             ddl-auto: none
         show-sql: true
+    h2:
+    console:
+      enabled: true
+      path: /h2-console
