--- a/auth-server.yml
+++ b/auth-server.yml
@@ -20,7 +20,7 @@ security:
             authorized-grant-types: password,refresh_token
             client-id: tomwellApp
             client-secret: $2a$10$OWdyA/qUvQ71CSbMMThAgep/z3piJgSpBaMBmZpa03YWvPqeyCVEi
-            resource-ids: resources
+            resource-ids: resource_id
             scope: read,write
 
 spring:
