--- a/user-service.yml
+++ b/user-service.yml
@@ -1,3 +1,47 @@
-user-service:
-  maxOrders: 10
-  minOrders: 1
+server:
+  port: 8093
+
+eureka:
+  instance:
+    hostname: localhost
+    port: 8091
+  client:
+    registerWithEureka: true
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+  server:
+    wait-time-in-ms-when-sync-empty: 3000
+
+spring:
+    datasource:
+      url: jdbc:h2:mem:test
+      hikari:
+        maximum-pool-size: 30
+        connectionTimeout: 30000
+        idleTimeout: 600000
+        maxLifetime: 1800000
+    jpa: 
+      properties: 
+        hibernate: 
+          id: 
+            new_generator_mappings: false
+          format_sql: true
+          jdbc: 
+            lob: 
+              non_contextual_creation: true
+          ddl-auto: validate
+    h2:
+      console:
+        enabled: true
+        path: /h2-console
+        
+    jackson:
+      default-property-inclusion: NON_NULL
+
+authserver:
+  hostname: http://localhost:8092
+security:
+  oauth2:
+    resource:
+      userInfoUri: ${authserver.hostname}/user
