--- a/user-service.yml
+++ b/user-service.yml
@@ -16,7 +16,7 @@ eureka:
 spring:
     datasource:
       driver-class-name: com.mysql.jdbc.Driver
-      password: '1234'
+      password: '12345678'
       platform: mysql
       url: jdbc:mysql://db4free.net:3306/tomwel
       username: root      
