--- a/user-service.yml
+++ b/user-service.yml
@@ -19,7 +19,7 @@ spring:
       password: '12345678'
       platform: mysql
       url: jdbc:mysql://db4free.net:3306/tomwel
-      username: root      
+      username: tomwel      
       hikari:
         maximum-pool-size: 30
         connectionTimeout: 30000
