--- a/user-service.yml
+++ b/user-service.yml
@@ -26,7 +26,7 @@ spring:
         idleTimeout: 600000
         maxLifetime: 1800000
     jpa:
-        database-platform: org.hibernate.dialect.MySQLDialect
+        database-platform: org.hibernate.dialect.MySQL8Dialect
         generate-ddl: false
         hibernate:
             ddl-auto: create
