--- a/user-service.yml
+++ b/user-service.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8093
+  port: ${PORT:8093}
 
 eureka:
   instance:
     hostname: http://tw-eureka-server.herokuapp.com/
-    port: 8091
+    port: ${PORT:8091}
   client:
     registerWithEureka: true
     fetchRegistry: false
