--- a/user-service.yml
+++ b/user-service.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   instance:
     hostname: http://tw-eureka-server.herokuapp.com/
-    port: 8091
+    port: ${PORT:8091}
     hostname: localhost
   client:
     registerWithEureka: true
