--- a/user-service.yml
+++ b/user-service.yml
@@ -4,12 +4,12 @@ server:
 eureka:
   instance:
     port: ${PORT:8091}
-    hostname: tw-eureka-server.herokuapp.com
+    hostname: localhost
   client:
     registerWithEureka: true
     fetchRegistry: false
     serviceUrl:
-      defaultZone: https://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 3000
 
