--- a/auth-server.yml
+++ b/auth-server.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8092
+  port: ${PORT:8092}
 
 eureka:
   instance:
+    port: ${PORT:8091}
     hostname: localhost
-    port: 8091
   client:
     registerWithEureka: true
     fetchRegistry: false
@@ -27,15 +27,22 @@ security:
 
 spring:
     datasource:
-        url: jdbc:h2:mem:test
-        data: classpath:/sql/data.sql
-        schema: classpath:/sql/schema.sql
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      password: '12345678'
+      platform: mysql
+      url: jdbc:mysql://db4free.net:3306/tomwel
+      username: tomwel
+      hikari:
+        maximum-pool-size: 30
+        connectionTimeout: 30000
+        idleTimeout: 600000
+        maxLifetime: 1800000
     jpa:
+        database-platform: org.hibernate.dialect.MySQL8Dialect
         generate-ddl: false
         hibernate:
-            ddl-auto: create
+            ddl-auto: none
         show-sql: true
-    h2:
-      console:
-        enabled: true
-        path: /h2-console
+    
+    jackson:
+      default-property-inclusion: NON_NULL
