--- a/auth-server.yml
+++ b/auth-server.yml
@@ -41,7 +41,7 @@ spring:
         database-platform: org.hibernate.dialect.MySQL8Dialect
         generate-ddl: false
         hibernate:
-            ddl-auto: none
+            ddl-auto: update
         show-sql: true
     
     jackson:
